Fixing spacing on search

--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -1,3 +1,5 @@
 page-search {
-
+  .push-down {
+    margin-top: 25px;
+  }
 }
